Calculator 3/Grammar/CalculatorParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Calculator.g 2010-02-10 23:44:47

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

namespace  Calculator.Grammar 
{
public partial class CalculatorParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"VECTOR", 
		"UNARY", 
		"NEGATION", 
		"FACTORIAL", 
		"ID", 
		"NEGATE", 
		"EXCLAIMATION", 
		"SIN", 
		"COS", 
		"TAN", 
		"ATAN", 
		"ACOS", 
		"ASIN", 
		"ABS", 
		"DEG", 
		"RAD", 
		"LN", 
		"LOG", 
		"SQRT", 
		"DOUBLE", 
		"MOD", 
		"POW", 
		"EQUALS", 
		"PLUS", 
		"MINUS", 
		"MULT", 
		"DIVIDE", 
		"NEWLINE", 
		"WS", 
		"'{'", 
		"'}'", 
		"'('", 
		"')'", 
		"';'"
    };

    public const int EXCLAIMATION = 10;
    public const int DEG = 18;
    public const int ACOS = 15;
    public const int LN = 20;
    public const int MOD = 24;
    public const int LOG = 21;
    public const int NEGATE = 9;
    public const int EQUALS = 26;
    public const int MULT = 29;
    public const int MINUS = 28;
    public const int SQRT = 22;
    public const int ID = 8;
    public const int EOF = -1;
    public const int ABS = 17;
    public const int WS = 32;
    public const int T__33 = 33;
    public const int POW = 25;
    public const int T__34 = 34;
    public const int NEWLINE = 31;
    public const int T__35 = 35;
    public const int NEGATION = 6;
    public const int T__36 = 36;
    public const int VECTOR = 4;
    public const int SIN = 11;
    public const int T__37 = 37;
    public const int COS = 12;
    public const int TAN = 13;
    public const int RAD = 19;
    public const int DOUBLE = 23;
    public const int PLUS = 27;
    public const int ASIN = 16;
    public const int ATAN = 14;
    public const int UNARY = 5;
    public const int FACTORIAL = 7;
    public const int DIVIDE = 30;

    // delegates
    // delegators



        public CalculatorParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public CalculatorParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return CalculatorParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Calculator.g"; }
    }


    public class root_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "root"
    // Calculator.g:21:1: root : stat ;
    public CalculatorParser.root_return root() // throws RecognitionException [1]
    {   
        CalculatorParser.root_return retval = new CalculatorParser.root_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        CalculatorParser.stat_return stat1 = default(CalculatorParser.stat_return);



        try 
    	{
            // Calculator.g:22:2: ( stat )
            // Calculator.g:22:4: stat
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_stat_in_root77);
            	stat1 = stat();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, stat1.Tree);

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "root"

    public class stat_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "stat"
    // Calculator.g:25:1: stat : ( expr -> expr | ID '=' expr -> ^( '=' ID expr ) );
    public CalculatorParser.stat_return stat() // throws RecognitionException [1]
    {   
        CalculatorParser.stat_return retval = new CalculatorParser.stat_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken ID3 = null;
        IToken char_literal4 = null;
        CalculatorParser.expr_return expr2 = default(CalculatorParser.expr_return);

        CalculatorParser.expr_return expr5 = default(CalculatorParser.expr_return);


        CommonTree ID3_tree=null;
        CommonTree char_literal4_tree=null;
        RewriteRuleTokenStream stream_EQUALS = new RewriteRuleTokenStream(adaptor,"token EQUALS");
        RewriteRuleTokenStream stream_ID = new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_expr = new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try 
    	{
            // Calculator.g:26:2: ( expr -> expr | ID '=' expr -> ^( '=' ID expr ) )
            int alt1 = 2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0 == NEGATE || (LA1_0 >= SIN && LA1_0 <= DOUBLE) || LA1_0 == 33 || LA1_0 == 35) )
            {
                alt1 = 1;
            }
            else if ( (LA1_0 == ID) )
            {
                int LA1_2 = input.LA(2);

                if ( (LA1_2 == EQUALS) )
                {
                    alt1 = 2;
                }
                else if ( (LA1_2 == EOF || LA1_2 == EXCLAIMATION || (LA1_2 >= MOD && LA1_2 <= POW) || (LA1_2 >= PLUS && LA1_2 <= DIVIDE)) )
                {
                    alt1 = 1;
                }
                else 
                {
                    NoViableAltException nvae_d1s2 =
                        new NoViableAltException("", 1, 2, input);

                    throw nvae_d1s2;
                }
            }
            else 
            {
                NoViableAltException nvae_d1s0 =
                    new NoViableAltException("", 1, 0, input);

                throw nvae_d1s0;
            }
            switch (alt1) 
            {
                case 1 :
                    // Calculator.g:26:4: expr
                    {
                    	PushFollow(FOLLOW_expr_in_stat88);
                    	expr2 = expr();
                    	state.followingStackPointer--;

                    	stream_expr.Add(expr2.Tree);


                    	// AST REWRITE
                    	// elements:          expr
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 26:9: -> expr
                    	{
                    	    adaptor.AddChild(root_0, stream_expr.NextTree());

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 2 :
                    // Calculator.g:27:4: ID '=' expr
                    {
                    	ID3=(IToken)Match(input,ID,FOLLOW_ID_in_stat97);  
                    	stream_ID.Add(ID3);

                    	char_literal4=(IToken)Match(input,EQUALS,FOLLOW_EQUALS_in_stat99);  
                    	stream_EQUALS.Add(char_literal4);

                    	PushFollow(FOLLOW_expr_in_stat101);
                    	expr5 = expr();
                    	state.followingStackPointer--;

                    	stream_expr.Add(expr5.Tree);


                    	// AST REWRITE
                    	// elements:          ID, expr, EQUALS
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 27:16: -> ^( '=' ID expr )
                    	{
                    	    // Calculator.g:27:19: ^( '=' ID expr )
                    	    {
                    	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
                    	    root_1 = (CommonTree)adaptor.BecomeRoot(stream_EQUALS.NextNode(), root_1);

                    	    adaptor.AddChild(root_1, stream_ID.NextNode());
                    	    adaptor.AddChild(root_1, stream_expr.NextTree());

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "stat"

    public class expr_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "expr"
    // Calculator.g:30:1: expr : multExpr ( ( '+' | '-' ) multExpr )* ;
    public CalculatorParser.expr_return expr() // throws RecognitionException [1]
    {   
        CalculatorParser.expr_return retval = new CalculatorParser.expr_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal7 = null;
        IToken char_literal8 = null;
        CalculatorParser.multExpr_return multExpr6 = default(CalculatorParser.multExpr_return);

        CalculatorParser.multExpr_return multExpr9 = default(CalculatorParser.multExpr_return);


        CommonTree char_literal7_tree=null;
        CommonTree char_literal8_tree=null;

        try 
    	{
            // Calculator.g:31:2: ( multExpr ( ( '+' | '-' ) multExpr )* )
            // Calculator.g:31:4: multExpr ( ( '+' | '-' ) multExpr )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_multExpr_in_expr122);
            	multExpr6 = multExpr();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, multExpr6.Tree);
            	// Calculator.g:31:13: ( ( '+' | '-' ) multExpr )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( ((LA3_0 >= PLUS && LA3_0 <= MINUS)) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // Calculator.g:31:14: ( '+' | '-' ) multExpr
            			    {
            			    	// Calculator.g:31:14: ( '+' | '-' )
            			    	int alt2 = 2;
            			    	int LA2_0 = input.LA(1);

            			    	if ( (LA2_0 == PLUS) )
            			    	{
            			    	    alt2 = 1;
            			    	}
            			    	else if ( (LA2_0 == MINUS) )
            			    	{
            			    	    alt2 = 2;
            			    	}
            			    	else 
            			    	{
            			    	    NoViableAltException nvae_d2s0 =
            			    	        new NoViableAltException("", 2, 0, input);

            			    	    throw nvae_d2s0;
            			    	}
            			    	switch (alt2) 
            			    	{
            			    	    case 1 :
            			    	        // Calculator.g:31:15: '+'
            			    	        {
            			    	        	char_literal7=(IToken)Match(input,PLUS,FOLLOW_PLUS_in_expr126); 
            			    	        		char_literal7_tree = (CommonTree)adaptor.Create(char_literal7);
            			    	        		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal7_tree, root_0);


            			    	        }
            			    	        break;
            			    	    case 2 :
            			    	        // Calculator.g:31:20: '-'
            			    	        {
            			    	        	char_literal8=(IToken)Match(input,MINUS,FOLLOW_MINUS_in_expr129); 
            			    	        		char_literal8_tree = (CommonTree)adaptor.Create(char_literal8);
            			    	        		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal8_tree, root_0);


            			    	        }
            			    	        break;

            			    	}

            			    	PushFollow(FOLLOW_multExpr_in_expr133);
            			    	multExpr9 = multExpr();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, multExpr9.Tree);

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class multExpr_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "multExpr"
    // Calculator.g:34:1: multExpr : powExpr ( ( '*' | '/' | '%' ) powExpr )* ;
    public CalculatorParser.multExpr_return multExpr() // throws RecognitionException [1]
    {   
        CalculatorParser.multExpr_return retval = new CalculatorParser.multExpr_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal11 = null;
        IToken char_literal12 = null;
        IToken char_literal13 = null;
        CalculatorParser.powExpr_return powExpr10 = default(CalculatorParser.powExpr_return);

        CalculatorParser.powExpr_return powExpr14 = default(CalculatorParser.powExpr_return);


        CommonTree char_literal11_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal13_tree=null;

        try 
    	{
            // Calculator.g:35:2: ( powExpr ( ( '*' | '/' | '%' ) powExpr )* )
            // Calculator.g:35:4: powExpr ( ( '*' | '/' | '%' ) powExpr )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_powExpr_in_multExpr146);
            	powExpr10 = powExpr();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, powExpr10.Tree);
            	// Calculator.g:35:12: ( ( '*' | '/' | '%' ) powExpr )*
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0 == MOD || (LA5_0 >= MULT && LA5_0 <= DIVIDE)) )
            	    {
            	        alt5 = 1;
            	    }


            	    switch (alt5) 
            		{
            			case 1 :
            			    // Calculator.g:35:13: ( '*' | '/' | '%' ) powExpr
            			    {
            			    	// Calculator.g:35:13: ( '*' | '/' | '%' )
            			    	int alt4 = 3;
            			    	switch ( input.LA(1) ) 
            			    	{
            			    	case MULT:
            			    		{
            			    	    alt4 = 1;
            			    	    }
            			    	    break;
            			    	case DIVIDE:
            			    		{
            			    	    alt4 = 2;
            			    	    }
            			    	    break;
            			    	case MOD:
            			    		{
            			    	    alt4 = 3;
            			    	    }
            			    	    break;
            			    		default:
            			    		    NoViableAltException nvae_d4s0 =
            			    		        new NoViableAltException("", 4, 0, input);

            			    		    throw nvae_d4s0;
            			    	}

            			    	switch (alt4) 
            			    	{
            			    	    case 1 :
            			    	        // Calculator.g:35:14: '*'
            			    	        {
            			    	        	char_literal11=(IToken)Match(input,MULT,FOLLOW_MULT_in_multExpr150); 
            			    	        		char_literal11_tree = (CommonTree)adaptor.Create(char_literal11);
            			    	        		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal11_tree, root_0);


            			    	        }
            			    	        break;
            			    	    case 2 :
            			    	        // Calculator.g:35:19: '/'
            			    	        {
            			    	        	char_literal12=(IToken)Match(input,DIVIDE,FOLLOW_DIVIDE_in_multExpr153); 
            			    	        		char_literal12_tree = (CommonTree)adaptor.Create(char_literal12);
            			    	        		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal12_tree, root_0);


            			    	        }
            			    	        break;
            			    	    case 3 :
            			    	        // Calculator.g:35:24: '%'
            			    	        {
            			    	        	char_literal13=(IToken)Match(input,MOD,FOLLOW_MOD_in_multExpr156); 
            			    	        		char_literal13_tree = (CommonTree)adaptor.Create(char_literal13);
            			    	        		root_0 = (CommonTree)adaptor.BecomeRoot(char_literal13_tree, root_0);


            			    	        }
            			    	        break;

            			    	}

            			    	PushFollow(FOLLOW_powExpr_in_multExpr160);
            			    	powExpr14 = powExpr();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, powExpr14.Tree);

            			    }
            			    break;

            			default:
            			    goto loop5;
            	    }
            	} while (true);

            	loop5:
            		;	// Stops C# compiler whining that label 'loop5' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "multExpr"

    public class powExpr_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "powExpr"
    // Calculator.g:47:1: powExpr : unary ( ( '^' ) unary )* ;
    public CalculatorParser.powExpr_return powExpr() // throws RecognitionException [1]
    {   
        CalculatorParser.powExpr_return retval = new CalculatorParser.powExpr_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken char_literal16 = null;
        CalculatorParser.unary_return unary15 = default(CalculatorParser.unary_return);

        CalculatorParser.unary_return unary17 = default(CalculatorParser.unary_return);


        CommonTree char_literal16_tree=null;

        try 
    	{
            // Calculator.g:48:2: ( unary ( ( '^' ) unary )* )
            // Calculator.g:48:4: unary ( ( '^' ) unary )*
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();

            	PushFollow(FOLLOW_unary_in_powExpr184);
            	unary15 = unary();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, unary15.Tree);
            	// Calculator.g:48:10: ( ( '^' ) unary )*
            	do 
            	{
            	    int alt6 = 2;
            	    int LA6_0 = input.LA(1);

            	    if ( (LA6_0 == POW) )
            	    {
            	        alt6 = 1;
            	    }


            	    switch (alt6) 
            		{
            			case 1 :
            			    // Calculator.g:48:11: ( '^' ) unary
            			    {
            			    	// Calculator.g:48:11: ( '^' )
            			    	// Calculator.g:48:12: '^'
            			    	{
            			    		char_literal16=(IToken)Match(input,POW,FOLLOW_POW_in_powExpr188); 
            			    			char_literal16_tree = (CommonTree)adaptor.Create(char_literal16);
            			    			root_0 = (CommonTree)adaptor.BecomeRoot(char_literal16_tree, root_0);


            			    	}

            			    	PushFollow(FOLLOW_unary_in_powExpr192);
            			    	unary17 = unary();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, unary17.Tree);

            			    }
            			    break;

            			default:
            			    goto loop6;
            	    }
            	} while (true);

            	loop6:
            		;	// Stops C# compiler whining that label 'loop6' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "powExpr"

    public class unary_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "unary"
    // Calculator.g:51:1: unary : ( ( NEGATE )+ factorial -> ^( NEGATION factorial ( NEGATE )+ ) | factorial );
    public CalculatorParser.unary_return unary() // throws RecognitionException [1]
    {   
        CalculatorParser.unary_return retval = new CalculatorParser.unary_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken NEGATE18 = null;
        CalculatorParser.factorial_return factorial19 = default(CalculatorParser.factorial_return);

        CalculatorParser.factorial_return factorial20 = default(CalculatorParser.factorial_return);


        CommonTree NEGATE18_tree=null;
        RewriteRuleTokenStream stream_NEGATE = new RewriteRuleTokenStream(adaptor,"token NEGATE");
        RewriteRuleSubtreeStream stream_factorial = new RewriteRuleSubtreeStream(adaptor,"rule factorial");
        try 
    	{
            // Calculator.g:52:2: ( ( NEGATE )+ factorial -> ^( NEGATION factorial ( NEGATE )+ ) | factorial )
            int alt8 = 2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0 == NEGATE) )
            {
                alt8 = 1;
            }
            else if ( (LA8_0 == ID || (LA8_0 >= SIN && LA8_0 <= DOUBLE) || LA8_0 == 33 || LA8_0 == 35) )
            {
                alt8 = 2;
            }
            else 
            {
                NoViableAltException nvae_d8s0 =
                    new NoViableAltException("", 8, 0, input);

                throw nvae_d8s0;
            }
            switch (alt8) 
            {
                case 1 :
                    // Calculator.g:52:4: ( NEGATE )+ factorial
                    {
                    	// Calculator.g:52:4: ( NEGATE )+
                    	int cnt7 = 0;
                    	do 
                    	{
                    	    int alt7 = 2;
                    	    int LA7_0 = input.LA(1);

                    	    if ( (LA7_0 == NEGATE) )
                    	    {
                    	        alt7 = 1;
                    	    }


                    	    switch (alt7) 
                    		{
                    			case 1 :
                    			    // Calculator.g:52:4: NEGATE
                    			    {
                    			    	NEGATE18=(IToken)Match(input,NEGATE,FOLLOW_NEGATE_in_unary206);  
                    			    	stream_NEGATE.Add(NEGATE18);


                    			    }
                    			    break;

                    			default:
                    			    if ( cnt7 >= 1 ) goto loop7;
                    		            EarlyExitException eee7 =
                    		                new EarlyExitException(7, input);
                    		            throw eee7;
                    	    }
                    	    cnt7++;
                    	} while (true);

                    	loop7:
                    		;	// Stops C# compiler whining that label 'loop7' has no statements

                    	PushFollow(FOLLOW_factorial_in_unary209);
                    	factorial19 = factorial();
                    	state.followingStackPointer--;

                    	stream_factorial.Add(factorial19.Tree);


                    	// AST REWRITE
                    	// elements:          NEGATE, factorial
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 52:22: -> ^( NEGATION factorial ( NEGATE )+ )
                    	{
                    	    // Calculator.g:52:25: ^( NEGATION factorial ( NEGATE )+ )
                    	    {
                    	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
                    	    root_1 = (CommonTree)adaptor.BecomeRoot((CommonTree)adaptor.Create(NEGATION, "NEGATION"), root_1);

                    	    adaptor.AddChild(root_1, stream_factorial.NextTree());
                    	    if ( !(stream_NEGATE.HasNext()) ) {
                    	        throw new RewriteEarlyExitException();
                    	    }
                    	    while ( stream_NEGATE.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_NEGATE.NextNode());

                    	    }
                    	    stream_NEGATE.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 2 :
                    // Calculator.g:53:4: factorial
                    {
                    	root_0 = (CommonTree)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_factorial_in_unary225);
                    	factorial20 = factorial();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, factorial20.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (CommonTree)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "unary"

    public class factorial_return : ParserRuleReturnScope
    {
        private CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (CommonTree) value; }
        }
    };

    // $ANTLR start "factorial"
    // Calculator.g:56:1: factorial : func ( ( EXCLAIMATION )+ -> ^( FACTORIAL func ( EXCLAIMATION )+ ) | -> func ) ;
    public CalculatorParser.factorial_return factorial() // throws RecognitionException [1]
    {   
        CalculatorParser.factorial_return retval = new CalculatorParser.factorial_return();
        retval.Start = input.LT(1);

        CommonTree root_0 = null;

        IToken EXCLAIMATION22 = null;
        CalculatorParser.func_return func21 = default(CalculatorParser.func_return);


        CommonTree EXCLAIMATION22_tree=null;
        RewriteRuleTokenStream stream_EXCLAIMATION = new RewriteRuleTokenStream(adaptor,"token EXCLAIMATION");
        RewriteRuleSubtreeStream stream_func = new RewriteRuleSubtreeStream(adaptor,"rule func");
        try 
    	{
            // Calculator.g:57:2: ( func ( ( EXCLAIMATION )+ -> ^( FACTORIAL func ( EXCLAIMATION )+ ) | -> func ) )
            // Calculator.g:57:4: func ( ( EXCLAIMATION )+ -> ^( FACTORIAL func ( EXCLAIMATION )+ ) | -> func )
            {
            	PushFollow(FOLLOW_func_in_factorial237);
            	func21 = func();
            	state.followingStackPointer--;

            	stream_func.Add(func21.Tree);
            	// Calculator.g:58:3: ( ( EXCLAIMATION )+ -> ^( FACTORIAL func ( EXCLAIMATION )+ ) | -> func )
            	int alt10 = 2;
            	int LA10_0 = input.LA(1);

            	if ( (LA10_0 == EXCLAIMATION) )
            	{
            	    alt10 = 1;
            	}
            	else if ( (LA10_0 == EOF || (LA10_0 >= MOD && LA10_0 <= POW) || (LA10_0 >= PLUS && LA10_0 <= DIVIDE) || LA10_0 == 34 || (LA10_0 >= 36 && LA10_0 <= 37)) )
            	{
            	    alt10 = 2;
            	}
            	else 
            	{
            	    NoViableAltException nvae_d10s0 =
            	        new NoViableAltException("", 10, 0, input);

            	    throw nvae_d10s0;
            	}
            	switch (alt10) 
            	{
            	    case 1 :
            	        // Calculator.g:58:4: ( EXCLAIMATION )+
            	        {
            	        	// Calculator.g:58:4: ( EXCLAIMATION )+
            	        	int cnt9 = 0;
            	        	do 
            	        	{
            	        	    int alt9 = 2;
            	        	    int LA9_0 = input.LA(1);

            	        	    if ( (LA9_0 == EXCLAIMATION) )
            	        	    {
            	        	        alt9 = 1;
            	        	    }


            	        	    switch (alt9) 
            	        		{
            	        			case 1 :
            	        			    // Calculator.g:58:4: EXCLAIMATION
            	        			    {
            	        			    	EXCLAIMATION22=(IToken)Match(input,EXCLAIMATION,FOLLOW_EXCLAIMATION_in_factorial242);  
            	        			    	stream_EXCLAIMATION.Add(EXCLAIMATION22);


            	        			    }
            	        			    break;

            	        			default:
            	        			    if ( cnt9 >= 1 ) goto loop9;
            	        		            EarlyExitException eee9 =
            	        		                new EarlyExitException(9, input);
            	        		            throw eee9;
            	        	    }
            	        	    cnt9++;
            	        	} while (true);

            	        	loop9:
            	        		;	// Stops C# compiler whining that label 'loop9' has no statements


